Fix Bitset reference bug